ADDING AUTH0 FOR THE ROUTES
